objects/PMC_CPQ_Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Nota_Fiscal_Number__c</fullName>
        <description>This field is to capture the SAP NF number.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>This field is to capture the SAP NF number.</inlineHelpText>
        <label>Nota Fiscal Number</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PMC_CPQ_BillToAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_BillToSAPID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Bill To SAP ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_BillingDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_BillingDocType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Doc Type</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_BillingDueDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_CurrencyCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Currency Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_CustomerPONumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Purchase Order #</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_DateDue__c</fullName>
        <description>This field captures the date the invoice is due.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_DateIssued__c</fullName>
        <description>This Field captures the date the invoice was issued.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Issued</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Delivery__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Delivery associated to this invoice.</description>
        <label>Delivery</label>
        <referenceTo>Shipment</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_EXTInvoiceComments__c</fullName>
        <description>This field captures the Comments in SAP invoice can be added in this comments field</description>
        <encryptionScheme>None</encryptionScheme>
        <label>EXT Invoice Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_InvoiceId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Invoice Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PMC_CPQ_InvoiceNumber__c</fullName>
        <description>This field is to capture the SAP Invoice Id.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SAP Invoice Number</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PMC_CPQ_NetInvoicedQuantity__c</fullName>
        <label>Net Invoiced Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_OrderProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_OriginalAmount__c</fullName>
        <label>Original Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ParentInvoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Invoice</label>
        <referenceTo>PMC_CPQ_Invoice__c</referenceTo>
        <relationshipLabel>Related Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Payer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices (Payer)</relationshipLabel>
        <relationshipName>Invoices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Quantity__c</fullName>
        <description>The total quantity of the invoice.</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Region__c</fullName>
        <description>Sales Region of Invoice.</description>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_CPQ_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_RemainingAmount__c</fullName>
        <label>Remaining Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SAPDeliveryID__c</fullName>
        <formula>PMC_CPQ_Delivery__r.PMC_CPQ_SAPDeliveryID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Delivery ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SoldToAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices (Sold To)</relationshipLabel>
        <relationshipName>PMC_CPQ_SoldToInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SoldToSAPID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Sold To SAP ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Storefront__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Storefront</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Terms__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_TotalInvoiceValue__c</fullName>
        <label>Total Invoice Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_DH_SAPInvoiceCreatedDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SAP Invoice Created Date</label>
        <type>Date</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PMC_CPQ_InvoiceNumber__c</columns>
        <columns>PMC_CPQ_SoldToAccount__c</columns>
        <columns>PMC_CPQ_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INV-{0000}</displayFormat>
        <label>Invoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>